examples/test/testpolicy18101.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18101
  namespace: namespace205
spec:
  podSelector:
    matchLabels:
      key6: value0
      key37: value40
      key8: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value27
      podSelector:
        matchLabels:
          key14: value32
